--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -2,14 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF9BC0DA">
+    android:background="@drawable/star_background_intro">
 
     <ImageView
         android:id="@+id/iv_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="360dp"
+        android:layout_height="360dp"
         android:layout_centerVertical="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/starlight_diary_intro" />
+        android:scaleType="centerInside"
+        android:src="@drawable/starlightdiary2"
+        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="24dp"/>
 
 </RelativeLayout>
