--- a/app/src/main/res/layout/feeling_fragment.xml
+++ b/app/src/main/res/layout/feeling_fragment.xml
@@ -2,34 +2,73 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/star_background_intro">
 
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="감정 폴더 정리"
+        android:text="나만의 감정 일기"
+        android:fontFamily="@font/kyobohandwriting2019"
+        android:textColor="#FF4A7CC8"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:textSize="24sp"/>
+        android:textSize="36sp"/>
 
-    <ImageView
-        android:id="@+id/iv_feeling_folder"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_feeling_folder"
-        android:layout_below="@id/tv"/>
-    <ImageView
-        android:id="@+id/iv_feeling_folder2"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_feeling_folder"
-        android:layout_below="@id/tv"/>
-    <ImageView
-        android:id="@+id/iv_feeling_folder3"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_feeling_folder"
-        android:layout_below="@id/tv"/>
+    <TextView
+        android:id="@+id/happiness_folder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/ic_feeling_folder"
+        android:padding="24dp"
+        android:textColor="#FF7CB0E8"
+        android:fontFamily="@font/kyobohandwriting2019"
+        android:text="행복"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/joy_folder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="기쁨"
+        android:fontFamily="@font/kyobohandwriting2019"
+        android:textSize="24sp"
+        android:textColor="#FF7CB0E8"
+        android:background="@drawable/ic_feeling_folder"
+        android:padding="24dp"
+        android:layout_below="@id/tv"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_toRightOf="@id/happiness_folder"
+        android:layout_marginStart="54dp"
+        android:paddingRight="8dp"/>
+
+    <TextView
+        android:id="@+id/romance_folder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="설렘"
+        android:fontFamily="@font/kyobohandwriting2019"
+        android:textSize="24sp"
+        android:textColor="#FF7CB0E8"
+        android:background="@drawable/ic_feeling_folder"
+        android:padding="24dp"
+        android:layout_below="@id/tv"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_toRightOf="@id/joy_folder"
+        android:layout_marginStart="54dp"
+        android:paddingRight="8dp"/>
+
+
+
+
+
+
 
 
 
