--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+<!--    <color name="colorTab1">#FF93E2E4</color>-->
+<!--    <color name="colorTab2">#FF95B9FF</color>-->
+
 </resources>
